--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: <todo>
+        image: us-east1-docker.pkg.dev/qwiklabs-gcp-02-da874cef22e5/my-repository/sample-app-prod:v1.0
         ports:
         - containerPort: 8080
