--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dev-container
-        image: <todo>
+        image: us-east1-docker.pkg.dev/qwiklabs-gcp-02-da874cef22e5/my-repository/hello-cloudbuild-dev:v2.0
         ports:
         - containerPort: 8080
